src/app/components/verse/verse.component.css
.verseNumber {
  color: var(--text-secondary);
  font-size: 65%;
  vertical-align: top;
  text-align: right;
}

.section {
  color: var(--text-secondary);
  font-weight: bold;
}

.s1Section {
  text-align: center;
  font-size: 130%;
  margin: auto;
}

.verseText {
  font-size: 120%;
}

h3 {
  font-size: 125%;
  text-align: center;
}

.references-block {
  display: block;
  text-align: center;
  font-size: 125%;
}

.text-block {
  display: inline-block;
}

.indent {
  margin-left: 1em;
  /* Adjust the indentation as needed */
}

.indent2 {
  margin-left: 2.5em;
  /* Adjust the indentation as needed */
}

.chapterNumber {
  float: left;
  /* Makes the chapter number float to the left */
  font-size: 315%;
  /* Adjust the font size as needed */
  line-height: 1;
  /* Adjusted for better alignment, might need tweaking */

  margin-right: 8px;  /* Adds space to the right of the chapter number */
  /* margin-bottom: 10px; Adds space below the chapter number */
  color: dimgray;
}

.center {
  margin: 0 auto;
  display: table;
}

* {
  user-select: text !important;
  -webkit-user-select: text !important;
  -ms-user-select: text !important;
}

.allCaps {
  font-variant: small-caps;
}

.references {
  font-size: 85%;
  color: var(--text-color);
  font-weight: normal;
}

.footnoteIndicator {
  vertical-align: top;
  font-size: 65%;
}

.quoteLineWrapper {
  position: relative;
  display: inline-block;
  /* Using flow-root to respect floated chapter numbers while maintaining block behavior */
  padding-left: 1em;
  /* Induction for wrapped lines + space for verse number */
  text-indent: -1em;
  /* Pull first line back, leaving space for verse number */
}

.quoteVerseNumber {
  position: absolute;
  right: 100%;
  white-space: nowrap;
  margin-right: 2px;
}

.interactive {
  cursor: pointer;
  outline: none;
}

